Fix IE11 icon alignment on header and system overview
Made height and width changes to icons on app header
and system overview to properly align icons in IE11.
Removes additional space in system overview quick
links.

Tested in Chrome, IE11, Safari, Edge.

--- a/app/common/styles/layout/header.scss
+++ b/app/common/styles/layout/header.scss
@@ -146,7 +146,7 @@ $logoMaxWidth: 125px;
     opacity: 1;
 
     .icon svg {
-      width: 1rem;
+      height: 1rem;
     }
 
     .status-icon {
@@ -173,10 +173,8 @@ $logoMaxWidth: 125px;
 
       .icon {
         @include fastTransition-all;
-        margin: 0.2em 0 0 0;
-
         svg {
-          width: 2.6rem;
+          width: 1.25rem;
           height: auto;
         }
       }
@@ -214,8 +212,7 @@ $logoMaxWidth: 125px;
       margin-right: auto;
 
       svg {
-        width: 1.6rem;
-        height: auto;
+        height: 1.5rem;
         fill: $primary-accent;
       }
     }
